Refactor JarResource: use URI for constructing JAR URLs, improve exception handling and add descriptive error messages